# RECURSUM

./: .gitignore  CLA.md  CMakeLists.txt  DLMF_COVERAGE_ANALYSIS.md  EXPANSION_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_STATUS_REPORT.md  LICENSE  README.md  RECURRENCE_TEST_COMPLETE.md  TEST_STATUS_SUMMARY.md  TRADEMARKS.md  init_vectorclass.sh  pyproject.toml  setup.py  test_summary.py
benchmarks/: CMakeLists.txt  FINAL_INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  LAYEREDCODEGEN_IMPLEMENTATION_SUMMARY.md  LAYERED_CODEGEN_ASSESSMENT.md  LAYERED_CODEGEN_CLARIFICATION.md  McMD_METHODOLOGY.md  PLOTTING_SUMMARY.md  SCREENING_CLARIFICATION_SUMMARY.md
benchmarks/analysis/: analyze_benchmarks.py  comprehensive_analysis.py  generate_benchmark_plots.py  plot_hermite_comparison.py  plot_mcmd_benchmarks.py  plot_mcmd_realistic.py  plot_publication.py  print_benchmark_summary.py
benchmarks/include/: benchmark_common.hpp  benchmark_dispatcher.hpp
benchmarks/results/: BENCHMARK_ANALYSIS.md  JK_MATRIX_ALKANES_RESULTS.md  jk_alkanes_results.csv  jk_alkanes_results.json
benchmarks/results/figures/: FIGURE_CAPTIONS.md  JK_FIGURE_CAPTIONS.md  README.md  generate_plots.py  regenerate_all_plots.py
benchmarks/results/raw/: coulomb_hermite.json  hermite_coefficients.json
benchmarks/scripts/: generate_comprehensive_symbolic.py  generate_dispatcher.py  generate_symbolic_code.py  plot_benchmark_comparison.py  plot_hermite_e_comparison.py  plot_jk_alkanes.py  plot_layered_vs_symbolic.py  run_advisor_analysis.sh  run_benchmarks.sh
benchmarks/src/coulomb_r/: bench_coulomb_hermite.cpp  test_coulomb_r_layered.cpp  validate_coulomb_layeredcodegen.cpp
benchmarks/src/hermite_e/: bench_all_coefficients.cpp  bench_comprehensive.cpp  bench_direct_comparison.cpp  bench_full_layer.cpp  bench_hermite_coefficients.cpp  bench_hermite_e_compare.cpp  bench_hermite_e_naive.cpp  bench_hermite_e_symbolic.cpp  bench_hermite_e_tmp.cpp  bench_layered_codegen_test.cpp  bench_layered_comparison.cpp  bench_mcmd_realistic.cpp
benchmarks/src/jk_matrix/: bench_jk_alkanes.cpp
benchmarks/symbolic_generated/: coulomb_r_symbolic.hpp  hermite_e_symbolic.hpp  hermite_grad_symbolic.hpp
docs/: TMP_CSE_Advantage.md
include/recursum/: README_VECTORCLASS.md  instrset.h  instrset_detect.cpp  mcmd.hpp  vector_convert.h  vectorclass.h  vectorf128.h  vectorf256.h  vectorf256e.h  vectorf512.h  vectorf512e.h  vectorfp16.h  vectorfp16e.h  vectori128.h  vectori256.h  vectori256e.h  vectori512.h  vectori512e.h  vectori512s.h  vectori512se.h  vectormath_common.h  vectormath_exp.h  vectormath_hyp.h  vectormath_lib.h  vectormath_trig.h
include/recursum/mcmd/: coulomb_aux.hpp  coulomb_r_layered.hpp  coulomb_r_layered_codegen.hpp  coulomb_r_symbolic.hpp  coulomb_r_symbolic_L0.hpp  coulomb_r_symbolic_L1.hpp  coulomb_r_symbolic_L2.hpp  coulomb_r_symbolic_L3.hpp  coulomb_r_symbolic_L4.hpp  hermite_e.hpp  hermite_e_cse.hpp  hermite_e_layered.hpp  hermite_grad.hpp  kinetic.hpp
recursum/: __init__.py  _bessel.py  _combinatorics.py  _mcmd.py  _orthogonal.py  _quantum.py  _rys.py  _special.py  cli.py  watch.py
recursum/codegen/: __init__.py  binding_gen.py  constraints.py  core.py  cpp_generator.py  demo_layered_gen.py  dispatcher_gen.py  generate_coulomb_layered.py  layered_generator.py  notebook_gen.py  optimizer.py  orchestrator.py  parser.py  recurrence.py  scipy_mapping.py  test_gen.py  test_layered_gen.py
recursum/recurrences/: __init__.py  bessel.py  combinatorics.py  mcmd.py  mcmd_gradients.py  mcmd_helgaker_taylor.py  orthogonal.py  quantum.py  rys.py  special.py
scripts/: README.md  mod_sph_bessel_i.hpp  mod_sph_bessel_k.hpp  recurrence_codegen.py  reduced_bessel_a.hpp  reduced_bessel_b.hpp  rys_2d_integral.hpp  rys_hrr.hpp  sto_aux_B.hpp
src/: CMakeLists.txt
tests/: comprehensive_verification.py  test_constraints.py  test_core.py  test_mcmd_headers.py  test_optimizer.py  test_parser.py  test_recurrence.py  test_scipy_mapping.py
